--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "serve": "vite preview"
   },
   "devDependencies": {
-    "sass": "^1.34.1",
     "vite": "^2.3.5"
+  },
+  "dependencies": {
+    "sass": "^1.41.1",
+    "scss": "^0.2.4"
   }
 }
